--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Neste espaço, homenageamos essa conexão, evidenciando a beleza e a relevância
             <h2>Momentos que Unem</h2>
             <div class="grid-galeria">
                 <div class="imagem-galeria">
-                
+                <img src="170649241-agricultor-com-chapéu-na-plantação-de-fazenda-no-pôr-do-sol-edifícios-e-cidade-fundo-turvo.jpg"
                     <p>Da terra para a mesa: a colheita que alimenta a cidade.</p>
                 </div>
                 <div class="imagem-galeria">
@@ -36,7 +36,7 @@ Neste espaço, homenageamos essa conexão, evidenciando a beleza e a relevância
                     <p>A vitalidade das feiras livres, um pedaço do campo na cidade.</p>
                 </div>
                 <div class="imagem-galeria">
-                    <img src=dcaace4902f44e35abd829010189380cf972516a.jpg"familia visitando turismo rural">
+                    <img src=hqdefault.jpg">
                     <p>O turismo rural aproximando famílias da vida no campo.</p>
                 </div>
                 <div class="imagem-galeria">
