--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ Neste espaço, homenageamos essa conexão, evidenciando a beleza e a relevância
                     <p>A vitalidade das feiras livres, um pedaço do campo na cidade.</p>
                 </div>
                 <div class="imagem-galeria">
+                <img src="dcaace4902f44e35abd829010189380cf972516a.jpg"
             
                     <p>O turismo rural aproximando famílias da vida no campo.</p>
                 </div>
