--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Neste espaço, homenageamos essa conexão, evidenciando a beleza e a relevância
                     <p>O turismo rural aproximando famílias da vida no campo.</p>
                 </div>
                 <div class="imagem-galeria">
-                    <img src=dcaace4902f44e35abd829010189380cf972516a.jpg">
+                <img src="Agricultura-4.0-potencializa-producao-e-gestao-300x174.jpg"
                     <p>Inovação tecnológica do campo, impulsionada pela pesquisa urbana.</p>
                 </div>
                 <div class="imagem-galeria">
