--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Neste espaço, homenageamos essa conexão, evidenciando a beleza e a relevância
                     <p>Arte urbana inspirada na simplicidade e beleza do campo.</p>
                 </div>
                 <div class="imagem-galeria">
-                    <img src=Agepen-parque-pneus-escola-ruralcapa.jpg"criança da cidade visitando escola rural">
+                <img src="Agepen-parque-pneus-escola-ruralcapa.jpg"
                     <p>Projetos educacionais que promovem a troca de conhecimentos.</p>
                 </div>
             </div>
