--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Neste espaço, homenageamos essa conexão, evidenciando a beleza e a relevância
                     <p>Inovação tecnológica do campo, impulsionada pela pesquisa urbana.</p>
                 </div>
                 <div class="imagem-galeria">
-                   <img src=hqdefault.jpg"arte urbana com elementos rurais">    
+                <img src="hqdefault.jpg"   
                     <p>Arte urbana inspirada na simplicidade e beleza do campo.</p>
                 </div>
                 <div class="imagem-galeria">
