--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Neste espaço, homenageamos essa conexão, evidenciando a beleza e a relevância
             <p>A troca cultural entre campo e cidade enriquece ambos os lados. Manifestações artísticas, culinária típica, festas tradicionais e o folclore do campo chegam à cidade, enquanto o dinamismo cultural urbano, suas tendências e inovações, reverberam nas áreas rurais. O lazer também se beneficia dessa interação, com o turismo rural ganhando força como uma forma de escape e reconexão com a natureza para os urbanos, e o acesso a eventos, shows e exposições urbanas oferecendo novas experiências para os moradores do campo.</p>
         </section>
     </main>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.js"></script>
     <footer>
         <p>&copy; 2025 Campo & Cidade. Todos os direitos reservados.</p>
     </footer>
