--- a/index.html
+++ b/index.html
@@ -68,5 +68,6 @@ Neste espaço, homenageamos essa conexão, evidenciando a beleza e a relevância
     <footer>
         <p>&copy; 2025 Campo & Cidade. Todos os direitos reservados.</p>
     </footer>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.js"
 </body>
 </html>
