--- a/index.html
+++ b/index.html
@@ -74,6 +74,6 @@ Neste espaço, homenageamos essa conexão, evidenciando a beleza e a relevância
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
-
+ <footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.js"></script>
     <script src="script.js"></script>
